phpMyFAQ 2.10.0
Codename "Phobos"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.10.0 - 2016-
- changed PHP requirement to PHP 5.6+ and PHP 7 (Thorsten)
- added LDAP configuration frontend (Thorsten)
- improved REST/JSON API (Thorsten)
- updated bundled Symfony ClassLoader to version 2.7.16 (Thorsten)
- updated bundled SwiftMailer to version 5.4.3 (Thorsten)
- updated bundled Elasticsearch client to version 2.2.1 (Thorsten)

Version 2.9.5 - 2016-08
- fixed minor bugs (Thorsten)

Version 2.9.4 - 2016-08-02
- deactivated debug mode (Thorsten)
- updated bundled TinyMCE to version 4.4.1 (Thorsten)
- updated bundled Bootstrap to version 3.3.7 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.3 - 2016-08-01
- fixed minor bugs (Thorsten)

Version 2.9.2 - 2016-07-05
- updated bundled phpseclib to version 2.0.2 (Thorsten)
- updated bundled TinyMCE to version 4.4.0 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.1 - 2016-05-31
- fixed stored XSS vulnerability (Kacper Szurek)
- added new source code paste plugin (Thorsten)
- removed American English translation (Thorsten)
- updated bundled TinyMCE to version 4.3.12 (Thorsten)
- updated bundled Typeahead.js to version 0.11.0 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.0 - 2016-05-13
- ready for PHP 7 (Thorsten)
- changed PHP requirement to PHP 5.5+ and PHP 7 (Thorsten)
- added support for HHVM 3.4.2+ (Thorsten)
- added support for Elasticsearch (Thorsten)
- added new mobile first, touch-friendly default layout (Thorsten)
- added tag intersection based search (Tomer Weinberg, Thorsten)
- added support for Markdown (Jerry van Kooten, Thorsten)
- added permissions for guests (Thorsten)
- added support for multiple LDAP/AD servers (Bernhard Müller, Thorsten)
- added experimental support for LDAP dynamic user binding (Thorsten)
- added frontend dependency management using Bower (Thorsten)
- added possibility to delete all logged search terms (Thorsten)