@@ -8,6 +8,7 @@ This is a log of major user-visible changes in each phpMyFAQ release.
 Version 2.10.0 - 2016-
 - changed PHP requirement to PHP 5.6+ and PHP 7 (Thorsten)
 - added LDAP configuration frontend (Thorsten)
+- added configuration for enable/disable XML sitemap (Thorsten)
 - improved REST/JSON API (Thorsten)
 - updated bundled Symfony ClassLoader to version 2.7.16 (Thorsten)
 - updated bundled SwiftMailer to version 5.4.3 (Thorsten)
